--- a/Angular/admin/src/app/app.component.html
+++ b/Angular/admin/src/app/app.component.html
@@ -32,12 +32,22 @@
               <li><a routerLink="/fake-feedback">fake-feedback</a></li>
               </ul>
       </li>
+      <li class="dropd">
+        <a href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Referrals
+        </a>
+        <ul class="dropd-menu">
+          <li><a routerLink="/manage-referrals">manage-referrals</a></li> 
+          <li><a routerLink="/validate-referrals">validate-referrals</a></li>
+          </ul>
+  </li>
           <li >
             <a  href="#">Payments</a>
           </li>
           <li >
             <a  href="#">Withdrawals</a>
           </li>
+          
           <li>
             <a routerLink="/manage-custom-requests">Requests</a>
           </li>
@@ -60,9 +70,7 @@
           <li>
             <a href="#">Files</a>
           </li>
-          <li class="nav-item">
-            <a  href="#">Referrals</a>
-          </li>
+          
           <li >
             <a href="#">Launch</a>
           </li>
