--- a/Angular/user/src/app/app.component.html
+++ b/Angular/user/src/app/app.component.html
@@ -69,6 +69,7 @@
                                     <input type="text" class="input1" id="d-signup-email" placeholder="Email" [(ngModel)]="regEmail">
 
                                     <input type="password" class="input1" name="name" id="d-signup-pwd" placeholder="Password" [(ngModel)]="regPassword">
+                                    <input type="text" class="input1" id="d-signup-code" placeholder="referral_code" [(ngModel)]="referral_code">
 
                                     <span class="form-err signup-err" id="serr"></span>
 
