--- a/Angular/admin/src/app/admin/admin-edit-gig/admin-edit-gig.component.html
+++ b/Angular/admin/src/app/admin/admin-edit-gig/admin-edit-gig.component.html
@@ -1,12 +1,13 @@
 <div class="container">
   <br>
       <div class="form-group">
-          Gig-Id
-        <input type="text" class="form-control" [(ngModel)]="gig_id">
+        Gig-Id:  <p>{{gig_id}}</p>  
       </div>
       <div class="form-group">
           Poster
-        <input type="text" class="form-control" [(ngModel)]="user_name">
+          <select class="form-control" [(ngModel)]="selected_user">
+            <option *ngFor="let u of users" [ngValue]="u.name">{{u.name}}</option>
+          </select>
       </div>
       <div class="form-group">
           Title
@@ -16,6 +17,16 @@
             Description
             <textarea class="form-control" [(ngModel)]="description"></textarea>
           </div>
+          <div class="form-group">
+            Category
+            <select class="form-control" [(ngModel)]="selected_cat">
+              <option *ngFor="let c of categories" [ngValue]="c.category_name">{{c.category_name}}</option>
+            </select>
+        </div>
+        <div class="form-group">
+          Days To Complete
+          <input type="text" class="form-control" [(ngModel)]="selected_days">
+      </div>
             <div class="form-group">
                 Date Created:
                 <p>{{date}}</p>
@@ -24,7 +35,9 @@
                   Price
                   <input type="text" class="form-control" [(ngModel)]="price">
                 </div>
+                photo#1: <img src="{{image1}}" alt="" width="150px" height="100px"><br>
                   <a  class="btn btn-block btn-success" (click)="edit_this()">Submit</a>
                   <br><br>
+                  
     </div>
     
