--- a/Angular/admin/src/app/admin/admin-add-sub-category/admin-add-sub-category.component.html
+++ b/Angular/admin/src/app/admin/admin-add-sub-category/admin-add-sub-category.component.html
@@ -1,4 +1,34 @@
-<div class="container">
+<app-header></app-header>
+<br>
+<div class="main-col">
+    <div class="main-col-inner">
+      <div id="messages"></div>
+      <div class="con-header">
+        <div class="con-h">
+          <h3 class="con-header-title">
+            Manage-Categories
+          </h3>
+          <div class="con-header-button">
+            <button class="con-button">
+              <i class="fa fa-plus-circle"></i> Add category</button>
+          </div>
+        </div>
+      </div>
+      <div class="group-content">
+        <div class="edit-heading">
+          <h6>Categories</h6>
+        </div>
+      </div>
+      <div class="edit-cat">
+        jashdfjhadsfjhjfdcbsjkdb
+        jsgkjsdafgjdgfjk
+        dbcfkjdsagjkd
+      </div>
+      </div>
+<!-- <div class="container">
+    <div id="heading">
+        Add Sub-Category
+      </div><br>
   <div class="form-group">
     Parent_category
   
@@ -34,4 +64,4 @@
                 <a  class="btn btn-block btn-success" (click)="submit_this()">Submit</a>
                 <br><br>
   </div>
-  
+   -->
