--- a/Angular/admin/src/app/admin/admin-categories/admin-categories.component.html
+++ b/Angular/admin/src/app/admin/admin-categories/admin-categories.component.html
@@ -1,5 +1,9 @@
+<app-header></app-header>
+<br>
 <div class="container">
-<div class="form">
+    <div id="heading">
+        Add Category
+      </div> <br>
   <div class="form-group">
       category_name
       <input type="text" class="form-control" [(ngModel)]="category_name">
@@ -27,5 +31,4 @@
               <span id="serr"></span>
               <a  class="btn btn-block btn-success" (click)="submit_this()">Submit</a>
               <br><br>
-</div>
 </div>
