--- a/Angular/admin/src/app/admin/admin-edit-members/admin-edit-members.component.html
+++ b/Angular/admin/src/app/admin/admin-edit-members/admin-edit-members.component.html
@@ -1,5 +1,9 @@
+<app-header></app-header>
+<br>
 <div class="container">
-  
+        <div id="heading">
+                Edit Members
+              </div> <br>
       
       <div class="form-group">
           name        
