--- a/Angular/admin/src/app/admin/admin-manage-gigs/admin-manage-gigs.component.css
+++ b/Angular/admin/src/app/admin/admin-manage-gigs/admin-manage-gigs.component.css
@@ -4,3 +4,11 @@
     padding: 2px;
 
 }
+#edit{
+    cursor: pointer;
+    color: springgreen;
+}
+#del{
+    cursor: pointer;
+    color: tomato;
+}
