--- a/Angular/admin/src/app/admin/admin-add-sub-category/admin-add-sub-category.component.css
+++ b/Angular/admin/src/app/admin/admin-add-sub-category/admin-add-sub-category.component.css
@@ -1,3 +1,67 @@
 #serr{
     color: red;
+    text-align: center;
+}
+#heading{
+    background: rgb(115, 170, 113);
+    color:white;
+    padding: 2px;
+
+}
+div.main-col {
+    margin-left: 150px;
+    min-height: 450px;
+    padding: 0 0 25px 25px;
+}
+div.main-col-inner {
+    float: left;
+    width: 97%;
+}
+.con-header{
+    display: inline-block;
+    width: 100%;
+    border-bottom: 4px solid #888; 
+    /* max-width: 100vw; */
+}
+/* .con-h{
+ margin-bottom: 20px;
+} */
+.con-header-title{
+    float: left;
+    color:orange;
+
+}
+.con-header-button{
+    float: right;
+    margin-top: -8px;
+    padding: 5px 5px;
+    /* margin-right: 20px; */
+   
+}
+.con-button{
+    color: white;
+    background: orange;
+    border: none;
+    cursor: pointer;
+}
+.edit-heading {
+    background: #6f8992;
+    padding: 3px 3px;
+    width: 99%;
+    margin-top: 10px;
+
+}
+.edit-cat{
+    border: 1px solid #888;
+    width: 98%;
+    height: auto;
+    padding: 10px 10px;
+    overflow: auto;
+}
+
+.edit-heading h6{
+    color: white;
+    padding: 2px 2px;
+    font-size: 13px;
+    font-weight: 600;
 }
