--- a/Angular/admin/src/app/admin/admin-home/admin-home.component.css
+++ b/Angular/admin/src/app/admin/admin-home/admin-home.component.css
@@ -1,100 +1,137 @@
-.dashboard-container {
-    border: 1px solid #ccc;
+.sec{
+    height: 100vh;
 }
-.dashboard-container .switcher {
-    margin-bottom: 0;
-    border: 0;
+.section-home{
+    margin-bottom: 20px;
 }
-.switcher {
-    margin-bottom: 10px;
-    border: 1px solid #cddddd;
-    background: #e7efef;
+.home{
+    margin-top: 30px;
+    margin-left: 25px;
+    border-bottom: 4px solid #ddd;
+    margin-bottom: 20px;
+    width: 95%;
+}
+.home{
+    color: red;
+    /* margin-bottom: px; */
+}
+.section-s{
+    border: 1px solid #ddd;
+    margin-left: 20px;
+    width:95%;
+    height: auto;
+    overflow: hidden;
+}
+.section-s-title{
+    background: #E7EFEF;
     padding: 10px;
+    
 }
-label {
-    color: #333;
+.section-table{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 10px 20px 10px 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    
+    
+}
+.section-table-stat{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
 }
 table {
-    display: table;
-    border-collapse: separate;
-    border-spacing: 2px;
-    border-color: grey;
+font-family: arial, sans-serif;
+border-collapse: collapse;
+width: 100%;
 }
-tbody {
-    display: table-row-group;
-    vertical-align: middle;
-    border-color: inherit;
+.nobr{
+    padding: 2px 2px 2px 10px;
 }
-tr {
-    display: table-row;
-    vertical-align: inherit;
-    border-color: inherit;
+
+td{
+border: 1px solid #dddddd;
+text-align: left;
+
 }
-.entry-edit-head {
-    background: #6f8992;
-    padding: 2px 10px;
+.first{
+    padding:5px;
 }
-.entry-edit fieldset{
-    border: 1px solid #d6d6d6;
-    background: #fafafa;
-    margin-bottom: 1.5em;
+.last{
+    padding: 2px 2px 2px 25px;
 }
-/* .grid {
+ th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 2px;
+ }
+.section-gig{
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+.section-gig-stat{
+    margin-top: 20px;
+}
+.section-gig-other{
+      display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.section-gig-stat-other{
+  margin-top: 15px;
+    margin-left: 20px;
+}
+.section-gig-side{
+     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.edit-heading {
+background: #6f8992;
+padding: 15px 0px;
+
+}
+.edit-heading h4 {
+float: left;
+padding: 0;
+background: none;
+margin: 0;
+color: #fff;
+font-size: 1em;
+margin-top: -10px;
+min-height: 0;
+margin-left: 10px;
+}
+.fieldset {
+border: 1px solid #d6d6d6;
+background: #fafafa;
+}
+.grid {
     position: relative;
-    border-bottom: 0;
-    padding-bottom: .5em;
-}
-.np {
-    padding: 0 !important;
 }
 .grid table {
-    width: 100%;
-    border: 1px solid #cbd3d4;
-    border-bottom: none;
+    width: 350px;
 }
-/* colgroup {
-    display: table-column-group;
-} */
-/* col {
-    display: table-column;
-} */
- .grid tr.headings {
-    background: url(http://demo.fiverrscript.com/administrator/images/sort_row_bg.gif) 0 50% repeat-x;
-}
- .grid tr.headings th.no-link {
-    padding-top: 2px;
-    padding-bottom: 1px;
-    color: #67767e;
-}
+
 .grid tr.headings th {
-    border-width: 1px;
-    border-color: #f9f9f9 #d1cfcf #f9f9f9 #f9f9f9;
-    border-style: solid;
-    padding-top: 1px;
-    padding-bottom: 0;
-    font-size: .9em;
+border-width: 1px;
+border-color: #f9f9f9 #d1cfcf #f9f9f9 #f9f9f9;
+border-style: solid;
+
+    
 }
-/* .grid th {
-    white-space: nowrap;
-}*/
-.grid th, .grid td {
-    padding: 2px 4px 2px 4px;
+.grid tr.headings th .last{
+    margin-left: 20px;
 }
-/* .entry-edit .entry-edit-head h4 {
-    float: left;
-    padding: 0;
-    background: none;
-    margin: 0;
-    color: #fff;
-    font-size: 1em;
-    line-height: 18px;
-    min-height: 0;
-}  */
-/* td {
-    padding: 0;
-    vertical-align: top;
-} */
-/* td, th {
-    display: table-cell;
-    vertical-align: inherit;
-}  */
+.grid table td {
+border-width: 0 1px 1px 0;
+border-color: #dadfe0;
+border-style: solid;
+font-size: 14px;
+}
