--- a/Angular/admin/src/app/admin/admin-login/admin-login.component.html
+++ b/Angular/admin/src/app/admin/admin-login/admin-login.component.html
@@ -1,1 +1,18 @@
-
+<div class="container">
+    <br>
+    <div class="wrapp">
+    <div id="heading">
+      Login
+    </div>
+    <div class="form-group">
+        Email-Address:
+        <input type="text" class="form-control" [(ngModel)]="email">
+    </div>
+    <div class="form-group">
+        Password:
+        <input type="password" class="form-control" [(ngModel)]="password">
+    </div>
+    <span id="serr"></span><br><br>
+    <a (click)="login()" class="btn btn-success btn-block">Sign-In</a>
+    </div>
+</div>
