--- a/Angular/admin/src/app/admin/admin-add-sub-category/admin-add-sub-category.component.css
+++ b/Angular/admin/src/app/admin/admin-add-sub-category/admin-add-sub-category.component.css
@@ -1,67 +1,100 @@
-#serr{
-    color: red;
-    text-align: center;
-}
-#heading{
-    background: rgb(115, 170, 113);
-    color:white;
-    padding: 2px;
-
-}
 div.main-col {
-    margin-left: 150px;
     min-height: 450px;
-    padding: 0 0 25px 25px;
+    padding: 0 25px 0 25px;
 }
 div.main-col-inner {
     float: left;
-    width: 97%;
+    width: 100%;
 }
 .con-header{
     display: inline-block;
     width: 100%;
-    border-bottom: 4px solid #888; 
-    /* max-width: 100vw; */
+    border-bottom: 4px solid #888; margin-bottom: 10px;
 }
 /* .con-h{
  margin-bottom: 20px;
 } */
 .con-header-title{
     float: left;
-    color:orange;
+    color:#eb5e00;
+    margin-bottom: 5px;
 
 }
 .con-header-button{
     float: right;
     margin-top: -8px;
     padding: 5px 5px;
-    /* margin-right: 20px; */
    
 }
 .con-button{
-    color: white;
-    background: orange;
-    border: none;
-    cursor: pointer;
+   text-align: center;
+   cursor: pointer;
+   background: #ffac47;
+   font-size: 13px;
+   
 }
+.con-button:hover{
+    opacity: 0.7;
+}
+#serr{
+    color: #D8000C;
+    background-color: #FFD2D2;
+    font-size: 13px;
+    
+}
+#message{
+    color: #4F8A10;
+    background-color: #DFF2BF;
+    font-size: 13px;
+
+}
+
+
 .edit-heading {
     background: #6f8992;
     padding: 3px 3px;
-    width: 99%;
-    margin-top: 10px;
 
 }
-.edit-cat{
-    border: 1px solid #888;
-    width: 98%;
-    height: auto;
-    padding: 10px 10px;
-    overflow: auto;
-}
-
 .edit-heading h6{
     color: white;
     padding: 2px 2px;
     font-size: 13px;
     font-weight: 600;
+}
+.form{
+    border: 1px solid #d6d6d6;
+    padding: 1em 1.5em 1.2em 1.5em;
+}
+.form-grid{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: row;
+}
+.label{
+    font-size: 13px;
+}
+select{
+    width: 300px;
+    height: 17px;
+    font-size: 12px;
+}
+.input>input{
+    height: 12px;
+    width: 300px;
+    font-size: 12px;
+}
+option{
+    font-size: 12px;
+}
+.hint{
+    color: #6f8992;
+    font-size: 13px;
+    padding-left: 10px;
+}
+.label,.hint{
+    margin-bottom: 20px;
+}
+.input{
+    margin-bottom: 14px;
 }
