--- a/Angular/admin/src/app/admin/admin-login/admin-login.component.html
+++ b/Angular/admin/src/app/admin/admin-login/admin-login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <br>
     <div class="wrapp">
     <div id="heading">
@@ -15,4 +15,15 @@
     <span id="serr"></span><br><br>
     <a (click)="login()" class="btn btn-success btn-block">Sign-In</a>
     </div>
+</div> -->
+<div class="module">
+<div class="form-module">
+   
+    <div class="form">
+            <h2>Login to your account</h2>
+        <input type="text" placeholder="Username" [(ngModel)]="email">
+        <input type="password" placeholder="password" [(ngModel)]="password">
+        <button (click)="login()">Login</button>
+    </div>
+</div>
 </div>
