--- a/Angular/admin/src/app/admin/admin-manage-categories/admin-manage-categories.component.css
+++ b/Angular/admin/src/app/admin/admin-manage-categories/admin-manage-categories.component.css
@@ -12,97 +12,10 @@
     cursor: pointer;
     color: tomato;
 }
-/* .categories{
-  width: 100%;
-  height: 100%;
-  background: #ffffff;
-  display: flex;
-  justify-content:flex-start;
-  align-items: flex-start; 
-  flex-direction: column;
-}
-.cate-div{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-}
-.cat-left{
-    width: 30%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    margin-top: -50px;
-}
-.cat-left-title{
-    display: flex;
-    align-content: flex-start;
-    
-
-} */
-.middle {
-    min-height: 450px;
-    padding: 23px 27px 0 27px;
-}
-div.side-col {
-    float: left;
-    width: 220px;
-    padding-bottom: 25px;
-    border-right: 2px solid #cdcdcd;
-    height: 100vh;
-    /* margin-left: 20px; */
-    
-}
-
-.add{
-    background: #e7efef;
-}
-h3 {
-    margin-bottom: .5em;
-    color: #253033;
-    font-size: 16px;
-    margin-left: 20px;
-    font-weight: bold;
-}
-
-ul.tabs {
-    border-top: 1px solid #bebebe;
-    /* margin-left: -40px; */
-    margin-left: 20px;
-}
-ul.tabs li {
-    list-style: none;
-    font-size: 14px;
-    border-bottom: 1px solid #ddd;
-    padding:3px 3px;
-    margin-bottom: 3px;
-}
-.add-c{
-    margin-left: 20px;
-}
-ul.tabs a.active {
-    padding: 0;
-    border-bottom: 1px solid #bebebe;
-    background: none;
-}
-ul.tabs a, ul.tabs a:hover {
-    color: #000;
-}
-ul.tabs a.active span, ul.tabs a:hover.active span {
-    background: #fff;
-    font-weight: bold;
-}
-ul.tabs span {
-    /* padding: .3em 0.5em .28em 1.5em; */
-    cursor: pointer;
-}
 
 div.main-col {
-    margin-left: 220px;
     min-height: 450px;
-    padding: 0 0 25px 25px;
+    padding: 0 25px 0 25px;
 }
 div.main-col-inner {
     float: left;
@@ -118,8 +31,13 @@ div.main-col-inner {
 } */
 .con-header-title{
     float: left;
-    color:orange;
+    color:#eb5e00;;
 
+}
+#serr{
+    color: #4F8A10;
+    background-color: #DFF2BF;
+    font-size: 13px;
 }
 .con-header-button{
     float: right;
@@ -128,10 +46,14 @@ div.main-col-inner {
    
 }
 .con-button{
-    color: white;
-    background: orange;
-    border: none;
+    text-align: center;
     cursor: pointer;
+    background: #ffac47;
+    font-size: 13px;
+    
+ }
+ .con-button:hover{
+    opacity: 0.7;
 }
 .edit-heading {
     background: #6f8992;
