--- a/Angular/admin/src/app/admin/admin-manage-custom-request/admin-manage-custom-request.component.html
+++ b/Angular/admin/src/app/admin/admin-manage-custom-request/admin-manage-custom-request.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <br>
-<div class="container">
+<!-- <div class="container">
   <br>
     <div id="heading">
       Requests
@@ -26,4 +26,50 @@
       </tbody>
     </table>
   </div>
+   -->
+   <div class="main-col">
+      <div class="main-col-inner">
+        <div id="serr"></div>
+        <div class="con-header">
+          <div class="con-h">
+            <h3 class="con-header-title">
+             Requests - Manage Requests
+            </h3>
+          </div>
+        </div>
+        <div class="group-content">
+          <div class="edit-heading">
+            <h6>Manage-Requests</h6>
+          </div>
+        </div>
+        <div class="grid">
+          <table cellspacing="0">
+            <thead>
+              <tr>
+                <th class="id">ID</th>
+                <th class="name">Buyer Request</th>
+                <th class="pcat">Buyer</th>
+                <th clas="action">Action</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let c of custom_orders let i = index">
+              <tr class="s">
+                <td>
+                  {{i+1}}
+                </td>
+                <td>
+              {{c.order_description}}
+                </td>
+                <td>
+                  {{c.username}}
+                </td>
+                <td> <a routerLink="/edit-request/{{c._id}}"> <b id="edit">Edit</b> </a> | <a (click)="delete_this(c)"> <b id="del">Delete</b> </a></td>
+
+              </tr>
+            </tbody>
   
+          </table>
+        </div>
+  
+      </div>
+    </div>
