--- a/Angular/admin/src/app/admin/admin-manage-members/admin-manage-members.component.html
+++ b/Angular/admin/src/app/admin/admin-manage-members/admin-manage-members.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <br>
-<div class="container">
+<!-- <div class="container">
   <br>
     <div id="heading">
       Members
@@ -25,4 +25,54 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div> -->
+  <div class="main-col">
+      <div class="main-col-inner">
+        <div id="serr"></div>
+        <div class="con-header">
+          <div class="con-h">
+            <h3 class="con-header-title">
+             Members - Manage Members
+            </h3>
+          </div>
+        </div>
+        <div class="group-content">
+          <div class="edit-heading">
+            <h6>Manage-Members</h6>
+          </div>
+        </div>
+        <div class="grid">
+          <table cellspacing="0">
+            <thead>
+              <tr>
+                <th class="id">ID</th>
+                <th class="name">Username</th>
+                <th class="pcat">Email</th>
+                <th class="date">Date Joined</th>
+                <th clas="action">Action</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let m of members let i = index">
+              <tr class="s">
+                <td>
+                  {{i+1}}
+                </td>
+                <td>
+              {{m.name}}
+                </td>
+                <td>
+                  {{m.email}}
+                </td>
+                <td>
+                  {{m.formatted_date}}
+                </td>
+                <td> <a routerLink="/edit-members/{{m._id}}"> <b id="edit">Edit</b> </a> | <a (click)="delete_this(m)"> <b id="del">Delete</b> </a></td>
+
+              </tr>
+            </tbody>
+  
+          </table>
+        </div>
+  
+      </div>
+    </div>
