--- a/Angular/admin/src/app/admin/admin-manage-orders/admin-manage-orders.component.html
+++ b/Angular/admin/src/app/admin/admin-manage-orders/admin-manage-orders.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <br>
-<div class="container">
+<!-- <div class="container">
   <br>
     <div id="heading">
       Orders
@@ -30,4 +30,59 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div> -->
+  <div class="main-col">
+      <div class="main-col-inner">
+        <div id="serr"></div>
+        <div class="con-header">
+          <div class="con-h">
+            <h3 class="con-header-title">
+             Orders - Manage-Orders
+            </h3>
+          </div>
+        </div>
+        <div class="group-content">
+          <div class="edit-heading">
+            <h6>Manage-Orders</h6>
+          </div>
+        </div>
+        <div class="grid">
+          <table cellspacing="0">
+            <thead>
+              <tr>
+                <th class="id">ID</th>
+                <th class="name">Gig Ordered</th>
+                <th class="pcat">Buyer</th>
+                <th class="date">Date Ordered</th>
+                <th class="status">Status</th>
+                <th clas="action">Action</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let o of orders let i = index">
+              <tr class="s">
+                <td>
+                  {{i+1}}
+                </td>
+                <td>
+              {{o.gig_title}}
+                </td>
+                <td>
+                  {{o.buyer.name}}
+                </td>
+                <td>
+                  {{o.formatted_date}}
+                </td>
+                <td>
+                  {{o.order_status}}
+                </td>
+                <td *ngIf="o.order_status === 'Order Cancelled'"> <p id="can">Order Cancelled</p></td>
+                <td *ngIf="o.order_status === 'Order Delivered'"> <p id="del">Order Delivered</p></td>
+                <td *ngIf="o.order_status !== 'Order Cancelled' && o.order_status !== 'Order Delivered'"><a (click)="cancel_this(o)" id="can">CancelOrder</a></td>
+              </tr>
+            </tbody>
+  
+          </table>
+        </div>
+  
+      </div>
+    </div>
