--- a/Angular/admin/src/app/admin/header/header.component.css
+++ b/Angular/admin/src/app/admin/header/header.component.css
@@ -3,9 +3,13 @@
     padding: 0px;
        
 }
+.wrapper{
+    height: 100px;
+}
 .h{
     background: linear-gradient(#122b31,#36535d);
     width: 100%;
+    height: 40px;
     padding: 10px 10px;
 }
 #t{
@@ -42,7 +46,8 @@ ul {
 list-style-type: none;
 margin: 0;
 padding: 0;
-overflow: hidden;
+height: 100%;
+/* overflow: hidden; */
 background-color: #666E73;
 
 }
@@ -82,7 +87,7 @@ min-width:160px;
 width: 100%;
 height: 200px;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
+z-index: 100;
 
 }
 
@@ -104,4 +109,5 @@ color: black;
 
 .dropdown:hover .dropdown-content {
 display:block;
+
 }
